Minor changes to index and BasicLayer

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <div id="text">
         <h1>ThreeJS on MapLibre opacity demo</h1>
         <p>The black color in the square has it's alpha set to 0.   Note that the renderer background shows through instead of the map underneath.</p>
-        <p>Using <code>discard</code> in the fragment shader to exclude any color with alpha=0 is 
-            one workaround, but would prefer ThreeJS to render as fully transparent.
+        <p>Using <code>discard</code> in a custom fragment shader to exclude any color with alpha=0 is 
+            one workaround, but would prefer ThreeJS to render as fully transparent so the map will show through the rendered texture.
         </p>
     </div>
     <br/>
